fix scrollbar in section #playlist in aside tag

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,8 @@ main {
 
 footer {
     background-color: var(--sp-dark);
+    position: sticky;
+    z-index: 100;
 }
 
 h2,
@@ -83,7 +85,6 @@ main {
     padding: 0;
 }
 
-aside,
 .main_container {
     overflow-y: auto;
 }
@@ -93,7 +94,6 @@ aside {
     height: 100%;
     width: 220px;
     background-color: var(--sp-black);
-    
     font-weight: bold;
 }
 
@@ -113,7 +113,6 @@ aside .logo img.small_logo {
 
 .aside_top {
     color: var(--sp-light);
-    overflow-y: auto;
     font-size: 0.75rem;
 }
 
@@ -139,6 +138,9 @@ aside .logo img.small_logo {
 
 .playlist {
     padding: 1rem 0 1rem 1rem;
+    
+    height: 250px;
+    overflow-y: auto;
 }
 
 .playlist h4 {
